# yansi

./: .travis.yml  Cargo.toml  LICENSE-APACHE  README.md  gen-fmt.py
.github/workflows/: ci.yml  msrv.yml  style.yml  test.yml
src/: attr_quirk.rs  attribute.rs  bitops.rs  color.rs  condition.rs  docify.rs  fmt.rs  global.rs  hyperlink.rs  lib.rs  macros.rs  main.rs  paint.rs  set.rs  style.rs  tests.rs  windows.rs
tests/: basic.rs
