[package]
name = "yansi"
version = "0.6.0-dev"
edition = "2018"
authors = ["Sergio Benitez <sb@sergio.bz>"]
repository = "https://github.com/SergioBenitez/yansi"
documentation = "https://docs.rs/yansi"
description = "A dead simple ANSI terminal color painting library."
keywords = ["ansi", "terminal", "color", "format", "paint"]
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["command-line-interface"]

[dependencies]

[dev-dependencies]
serial_test = { version = "0.9", default-features = false }
