[package]
name = "yansi"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
detect-tty = ["is-terminal", "std"]
detect-env = ["std"]
std = ["alloc"]
alloc = []

# hidden feature to enable nightly doc cfg
_nightly = []

[dependencies]
is-terminal = { version = "0.4.7", optional = true }
